gaps was fixed

--- a/src/styles/_catalog.scss
+++ b/src/styles/_catalog.scss
@@ -1,29 +1,28 @@
 .catalog {
   display: grid;
-  justify-items: center;
-  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  justify-content: center;
+  grid-template-columns: repeat(4, $card-width);
   gap: 48px;
 
   @media (max-width: 1024px) {
-    grid-template-columns: repeat(3, minmax(200px, 1fr));
+    grid-template-columns: repeat(3, $card-width);
   }
 
   @media (max-width: 768px) {
-    grid-template-columns: repeat(2, minmax(200px, 1fr));
+    grid-template-columns: repeat(2, $card-width);
   }
 
   @media (max-width: 488px) {
-    grid-template-columns: repeat(1, minmax(200px, 1fr));
+    grid-template-columns: repeat(1, $card-width);
   }
 
-  max-width: 944px;
   margin: 0 auto;
 
   &__card {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 200px;
+    width: $card-width;
     height: 300px;
     border: 1px solid #ccc;
     border-radius: 5px;
